<resources>
    <string name="app_name">Instagram</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log-Out</string>
    <string name="forgot_password">Forgot password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>

    <string name="or">Or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="need_to_an_account">Need to an account?</string>
    <string name="you_have_an_account">You have an account?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="error_tag_text">Enter text</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_job_title">Enter job title</string>
    <string name="enter_email">Enter email address</string>
    <string name="invalid_email">Invalid email entered</string>
    <string name="enter_password">Enter password</string>
    <string name="invalid_password">Your password must be at least 8 characters</string>
    <string name="logout">Logout</string>
    <string name="noteListingFragment">Notes</string>
    <string name="taskListingFragment">Tasks</string>
    <string name="notes">Notes</string>
    <string name="tasks">Tasks</string>
    <string name="home_fragment">Home</string>
    <string name="create_task">Create Task</string>
    <string name="create">Create</string>
    <string name="done">Done</string>
    <string name="error_task_detail">Task detail is missing</string>

    <string name="tagOne">Hoa</string>
    <string name="tagTwo">DaNang</string>
    <string name="tagThree">ThienNhien</string>
    <string name="tagFour">VuiVe</string>
    <string name="tagFive">ChuNhat</string>
    <string name="numberOne">123 Post</string>
    <string name="numberTwo">5 Post</string>
    <string name="numberThree">1001 Post</string>
    <string name="numberFour">15 Post</string>
    <string name="numberFive">50 Post</string>
    <string name="title_activity_test">test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
