<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/padding_layout_12sp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="@dimen/img_width_height_logo"
        android:layout_height="@dimen/img_width_height_logo"
        android:src="@drawable/icon_instagram"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:fontFamily="@font/genos_semibold"
        android:textSize="@dimen/tv_main"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="@dimen/margin_15sp"
        android:hint="@string/email"
        android:padding="@dimen/padding_10sp"
        android:inputType="textEmailAddress"
        android:id="@+id/edtEmail"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="@dimen/margin_15sp"
        android:hint="@string/password"
        android:padding="@dimen/padding_10sp"
        android:inputType="textPassword"
        android:id="@+id/edtPassword"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10sp"
        android:fontFamily="@font/plus_jakarta_sans_font_wght"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textSize="@dimen/text_size_15sp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_10sp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:fontFamily="@font/plus_jakarta_sans_font_wght"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans_font_wght"
        android:gravity="center"
        android:text="@string/or"
        android:textSize="@dimen/text_size_15sp"/>

    <Button
        android:id="@+id/btnLoginGG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@drawable/bg_button_white"
        android:drawableStart="@drawable/icon_google"
        android:fontFamily="@font/plus_jakarta_sans_font_wght"
        android:paddingStart="@dimen/padding_30sp"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_18sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_30sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_to_an_account"
            android:fontFamily="@font/plus_jakarta_sans_font_wght"
            android:layout_marginEnd="@dimen/margin_10sp"/>
        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:fontFamily="@font/plus_jakarta_sans_font_wght"
            android:textColor="@color/brinkPink"/>

    </LinearLayout>

</LinearLayout>
