<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/padding_layout_12sp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="@dimen/img_width_height_logo"
        android:layout_height="@dimen/img_width_height_logo"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_instagram"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:fontFamily="@font/genos_semibold"
        android:textSize="@dimen/tv_main"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="@dimen/margin_15sp"
        android:hint="@string/username"
        android:padding="@dimen/padding_10sp"
        android:id="@+id/username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="@dimen/margin_15sp"
        android:hint="@string/email"
        android:padding="@dimen/padding_10sp"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        tools:ignore="ExtraText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="@dimen/margin_15sp"
        android:hint="@string/password"
        android:padding="@dimen/padding_10sp"
        android:id="@+id/password"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_marginTop="@dimen/margin_15sp"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_18sp"
        android:padding="@dimen/padding_10sp"
        android:id="@+id/register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_30sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_have_an_account"
            android:fontFamily="@font/plus_jakarta_sans_font_wght"
            android:layout_marginEnd="@dimen/margin_10sp"/>
        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/plus_jakarta_sans_font_wght"
            android:textColor="@color/brinkPink"/>

    </LinearLayout>

</LinearLayout>
